--- a/pom.xml
+++ b/pom.xml
@@ -72,4 +72,14 @@
       </plugins>
     </pluginManagement>
   </build>
+  <distributionManagement>
+  <repository>
+    <id>releases</id>
+    <url>http://34.208.184.186:8080/nexus-latest/content/repositories/releases</url>
+  </repository>
+     <snapshotRepository>
+    <id>snapshots</id>
+    <url>http://34.208.184.186:8080/nexus-latest/content/repositories/snapshots</url>
+  </snapshotRepository>
+</distributionManagement>
 </project>
